--- a/static/css/data_table.css
+++ b/static/css/data_table.css
@@ -351,3 +351,6 @@ div.table-responsive>div.dataTables_wrapper>div.row>div[class^="col-"]:last-chil
     border-radius: 50px !important;
     margin: 0 .3rem
 }
+
+.mdl-data-table td{padding:0px 1px;}
+.mdl-data-table td, .mdl-data-table th{text-align:left;}
