--- a/static/css/cssload_loader.css
+++ b/static/css/cssload_loader.css
@@ -1,3 +1,16 @@
+.cssload-loader{ display: none; z-index: 100001; }
+#overlay {
+  position: absolute;
+  display: none;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.5);
+  z-index: 100000;
+  cursor: pointer;
+}
+
 .cssload-loader {
     position: absolute;
     left: 50%;
