Add editing of raw ODK data

--- a/static/css/subm_viewer.css
+++ b/static/css/subm_viewer.css
@@ -6,3 +6,8 @@
 pre#json-renderer {
   border: 1px solid #aaa;
 }
+#json_editor {
+    width: 100%;
+    min-height: 600px;
+    font-size: smaller;
+}
