--- a/templates/jinja2/record_viewer.html
+++ b/templates/jinja2/record_viewer.html
@@ -20,28 +20,66 @@
     </div>
 </div>
 <div class='row'>
-    <div class='col-md-9'>
+    <div class='col-md-9' id='viewer'>
         <pre id="json-renderer" class='json-document'></pre>
     </div>
     <div class='col-md-3'>
         <div class="card">
-            <div class="card-header">Actions</div>
+            <div class='card-header'>Editing the RAW ODK data</div>
             <div class="card-body">
-                <p class="card-text">Navigate and click on a node on the left to show its value here</p>
-                <div class="form-group">
-                    <label for='new_value'>Node Value</label>
-                    <input type="text" class="form-control" id='new_value' name="new_value">
-                </div>
-                <div class="form-group">
+                <ol>
+                    <li class="card-text">Double click on the record on the right to edit</li>
+                    <li class="card-text">Specify an edit reason</li>
+                    <li class="card-text">Specify whether the already processed data should be reprocessed again</li>
+                    <li class="card-text">Save</li>
+                    <li class="card-text">The system will automatically process the modified data</li>
+                </ol>
+                <div class="form-group editing" style='display: none;'>
                     <label for='change_reason'>Edit Reason</label>
                     <input type="textarea" class="form-control" id='change_reason' name="change_reason">
                 </div>
-                <button class="btn btn-primary">Save Edits</button>
+                <div class="form-group editing" style='display: none;'>
+                    <label for='reprocess'>Reprocess the data?</label><br />
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="reprocess" id="reprocess_yes" value="yes">
+                        <label class="form-check-label" for="reprocess_yes">Yes</label>
+                    </div>
+                    <div class="form-check form-check-inline">
+                        <input class="form-check-input" type="radio" name="reprocess" id="reprocess_no" value="no">
+                        <label class="form-check-label" for="reprocess_no">No</label>
+                    </div>
+                </div>
+                <div class='actions editing text-center' style='display: none;'>
+                    <button class="btn btn-primary save-edits">Save Edits</button>
+                    <button class="btn btn-danger cancel-edits">Cancel</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
+{% endblock %}
+
+{% block modals %}
+<div class="modal fade" id="confirmModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="modal_title">Confirm Edits</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body" id='modal_message'>
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-danger btn-sm" data-dismiss="modal">Close</button>
+        <button id='confirm' type="button" class="btn btn-outline-success btn-sm">Save</button>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
 
 {% block javascript %}
