Fix download buttons

--- a/static/css/dm_dashboard.css
+++ b/static/css/dm_dashboard.css
@@ -49,3 +49,60 @@ body { margin: 0;   padding: 0;  min-width: 900px; }
 #farmer_reg_processing, #animal_reg_processing, #farmers_gender_dist, #animals_dist{ height: 250px; }
 
 .new_dash{height: calc(100vh - 223px);}
+
+.download_loader {
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        position: absolute;
+        display: none;
+        top: 45%;
+        left: 45%;
+        animation: rotate 1s linear infinite
+      }
+      .download_loader::before , .download_loader::after {
+        content: "";
+        box-sizing: border-box;
+        position: absolute;
+        inset: 0px;
+        border-radius: 50%;
+        border: 5px solid;
+        animation: prixClipFix 2s linear infinite ;
+      }
+      .download_loader::after{
+        border-color: #FF3D00;
+        animation: prixClipFix 2s linear infinite , rotate 0.5s linear infinite reverse;
+        inset: 6px;
+      }
+
+      @keyframes rotate {
+        0%   {transform: rotate(0deg)}
+        100%   {transform: rotate(360deg)}
+      }
+
+      @keyframes prixClipFix {
+          0%   {clip-path:polygon(50% 50%,0 0,0 0,0 0,0 0,0 0)}
+          25%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 0,100% 0,100% 0)}
+          50%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,100% 100%,100% 100%)}
+          75%  {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 100%)}
+          100% {clip-path:polygon(50% 50%,0 0,100% 0,100% 100%,0 100%,0 0)}
+      }
+
+
+select#odk_forms {
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 0.5em 2em 0.5em 0.5em;
+  border: 1px solid #eee;
+  width: 100%;
+  font: inherit;
+  line-height: inherit;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(45deg, transparent 50%, currentColor 50%), linear-gradient(135deg, currentColor 50%, transparent 50%);
+  background-position: right 15px top 1em, right 10px top 1em;
+  background-size: 5px 5px, 5px 5px;
+}
