--- a/templates/jinja2/download.html
+++ b/templates/jinja2/download.html
@@ -3,6 +3,7 @@
 
 <div class="wrapper wrapper-content animated fadeInRight">
     <link rel="stylesheet" href="{{ static('bower/jqwidgets/jqwidgets/styles/jqx.base.css') }}" />
+    <link rel="stylesheet" href="{{ static('bower/sweetalert/dist/sweetalert.css') }}" />
     <link rel="stylesheet" href="{{ static('css/dm_dashboard.css') }}" />
 
     <div id="dashboard">
@@ -11,6 +12,7 @@
             <div id="all_forms"></div>
             <div id="form_structure"></div>
         </div>
+
         <div id="buttons">
             <!-- button class="action_btn btn btn-w-m btn-primary" id="get_data_btn" data-toggle="modal" data-target="#confirmModal">Get Data</button -->
             <button class="action_btn btn btn-w-m btn-primary" id="get_data_btn">Get Data</button>
@@ -18,6 +20,7 @@
             <button class="action_btn btn btn-w-m btn-success" id="refresh_btn">Refresh Forms</button>
             <button class="action_btn btn btn-w-m btn-danger" id="delete_btn">Delete</button>
         </div>
+
         <div id="models">
             <div id="destination">
                 <label>Destination</label>
@@ -27,6 +30,7 @@
             <div id="all_models"></div>
             <div id="model_structure"></div>
         </div>
+
     </div>
     
     <div class="modal inmodal" id="confirmModal" tabindex="-1" role="dialog" aria-hidden="true">
@@ -89,5 +93,7 @@
         });
     </script>
 </div>
+
+<span class="download_loader"></span>
 
 {% endblock %}
